<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Class 1-->
        <TextView
            android:id="@+id/class_1_title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/class_1_title"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:hint="@string/gpa_hint"
            android:id="@+id/class_1_input"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Class 2-->
        <TextView
            android:id="@+id/class_2_title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/class_2_title"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_1_title" />

        <EditText
            android:hint="@string/gpa_hint"
            android:id="@+id/class_2_input"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_1_title" />

        <!--Class 3-->
        <TextView
            android:id="@+id/class_3_title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/class_3_title"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_2_title" />

        <EditText
            android:hint="@string/gpa_hint"
            android:id="@+id/class_3_input"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_2_title" />

        <!--Class 4-->
        <TextView
            android:id="@+id/class_4_title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/class_4_title"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_3_title" />

        <EditText
            android:hint="@string/gpa_hint"
            android:id="@+id/class_4_input"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_3_title" />

        <!--Class 5-->
        <TextView
            android:id="@+id/class_5_title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/class_5_title"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_4_title" />

        <EditText
            android:hint="@string/gpa_hint"
            android:id="@+id/class_5_input"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_4_title" />

        <Button
            android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/class_5_title"/>

        <TextView
            android:id="@+id/result_title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/result_title"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit" />

        <TextView
            android:id="@+id/result_value"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:textSize="24sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>